@@ -1,5 +1,15 @@
 2010-03-22	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	* libfs/src/rfs/rtems-rfs-bitmaps-ut.c,
+	libfs/src/rfs/rtems-rfs-block.c, libfs/src/rfs/rtems-rfs-buffer.c,
+	libfs/src/rfs/rtems-rfs-dir.c, libfs/src/rfs/rtems-rfs-file.c,
+	libfs/src/rfs/rtems-rfs-format.c, libfs/src/rfs/rtems-rfs-group.c,
+	libfs/src/rfs/rtems-rfs-rtems-file.c,
+	libfs/src/rfs/rtems-rfs-shell.c: Fix printf format warning. Primarily
+	for size_t.
+
+2010-03-22	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	* libcsupport/src/sleep_noposix.c: Fix warning and bug.
 
 2010-03-16	Joel Sherrill <joel.sherrill@oarcorp.com>
